[package]
name = "kanars"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"

[lib]
name = "kanars"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.20.0"
# "abi3-py38" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.8
features = ["abi3-py38"]
